feat: refactor CPF validation & enable AWS ECR push (#1)
* refactor: introduce Cpf value object and update CI/CD pipeline

- Create `Cpf` Value Object to encapsulate validation and formatting logic
- Refactor `Conta` entity to use `Cpf` VO and implement Builder pattern
- Move domain exceptions to `domain.model.exceptions` package and fix imports
- Update `ContaMapper` to use `toList()` and `Conta` Builder
- Add `@PositiveOrZero` validation for initial deposit in `CriarContaRequest`
- Implement `BadCredentialsException` handling in `GlobalExceptionHandler`
- Sanitize CPF input in `AuthenticationController` login endpoint
- Configure AWS credentials and ECR image push in GitHub Actions workflow
- Rename `env.exemple` to `env.example` and update IDE run configuration
- CriarContaUseCaseTest now properly uses Conta.builder()